force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/P2C_EnhancedListviewDefaultField__c.object-meta.xml
<CustomObject>
    <label>Enhanced Listview Default Field</label>
    <nameField>
        <label>P2C_EnhancedListviewDefaultField Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhanced Listview default fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>