force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <label>Display order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>