force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/EnhancedListviewConfig__c.field-meta.xml
<CustomField>
    <fullName>EnhancedListviewConfig__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Enhanced Listview Config</label>
    <referenceTo>P2C_EnhancedListviewConfig__c</referenceTo>
    <relationshipName>Enhanced_Listview_default_fields</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>