force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/IsEditable__c.field-meta.xml
<CustomField>
    <fullName>IsEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>