force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/IsLinkToRecord__c.field-meta.xml
<CustomField>
    <fullName>IsLinkToRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is link to record</label>
    <type>Checkbox</type>
</CustomField>