force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/LinkHoverDetailsLayout__c.field-meta.xml
<CustomField>
    <fullName>LinkHoverDetailsLayout__c</fullName>
    <description>JSON representation of the layout to use in details popup when the hover option is activated</description>
    <label>Link Hover Details Layout</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>