force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/LinkHoverShowDetails__c.field-meta.xml
<CustomField>
    <fullName>LinkHoverShowDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link Hover Show Details</label>
    <type>Checkbox</type>
</CustomField>