force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/LookupFieldToDisplay__c.field-meta.xml
<CustomField>
    <fullName>LookupFieldToDisplay__c</fullName>
    <description>Api name of the field on the lookup target object to show in the table</description>
    <label>Lookup Field to display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>