force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/PopupAlignment__c.field-meta.xml
<CustomField>
    <fullName>PopupAlignment__c</fullName>
    <label>Popup alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>