force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/PopupWidth__c.field-meta.xml
<CustomField>
    <fullName>PopupWidth__c</fullName>
    <label>Popup width (pixels)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>