force-app/main/default/objects/P2C_EnhancedListviewDefaultField__c/fields/TableColumnLabel__c.field-meta.xml
<CustomField>
    <fullName>TableColumnLabel__c</fullName>
    <label>Table column label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>